--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,8 +1,18 @@
 {{ define "main"}}    
-<h1>THIS IS A LIST PAGE</h1>  
-   And this is a test 
+<h1>{{ .Title }}</h1>  
+{{ range .Params.Components }}
+    {{ if .hero }}
+        {{ partial "hero.html" (dict "hero" .hero)}}  
+    {{ end }}
+    {{ if .grid }}
+        {{ partial "grid.html" (dict "grid" .grid)}}  
+    {{ end }}
+    {{ if .blurb }}
+        {{ partial "blurb.html" (dict "blurb" .blurb)}}  
+    {{ end }}
+{{ end }}
 <ul>
-    {{ range .Pages }}
+    {{ range where .Site.RegularPages "Type" "my_blog"}}
          <li><a href="{{ .Permalink}}">{{ .Title }}</a> </li>
     {{end}}
  </ul>
