--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -52,7 +52,7 @@ nav {
     justify-content: left;
     align-items: center;
     padding-left: 10px;
-    border-right: 1px solid white;
+    border-right: 1px solid $secondary ;
     cursor: pointer;
 }
 .nav-column a{
