Adding customized navbar

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,5 +3,9 @@
     {{ partial "head.html" .}}
     <body>
     {{ partial "header.html" .}}
+    <div class="main">
+
+    </div>
+    {{ partial "script.html" .}} 
     </body>
 </html>
