--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -1,69 +1,169 @@
 /* NAVBAR */
 
-nav {
-    min-height: 5vh;
-    background-size: cover;
-    padding: 0;
-    display: flex;
-    
+//nav {
+//    min-height: 5vh;
+//    background-size: cover;
+//    padding: 0;
+//    display: flex;
+//    
+//}
+//.nav-links {
+//    display: flex;
+//    list-style: none;
+//}
+//
+//.nav-links li {
+//    padding-left: 10rem;
+//    font-size: 1.2rem;
+//}
+//
+//.nav-links a{
+//    text-decoration: none;
+//    color: black;
+//}
+//
+//.nav-container{
+//    background-color: $primary;
+//    display: grid;
+//    width: 100%;
+//    height: 8vh;
+//    grid-template-areas: "left content right";
+//    grid-template-columns: 0.5fr 6fr 0.5fr;
+//}
+//.nav-border-left{
+//    grid-area: left;
+//    background-color: $primary;
+//}
+//.nav-border-right{
+//    grid-area: right;
+//}
+//.nav-content{
+//    grid-area: content;
+//    display: grid;
+//    width: 100%;
+//    height: 100%;
+//    grid-template-areas: "border-left center center center center border-right";
+//    grid-template-columns: repeat(auto, 6);
+//}
+//
+//.nav-column{
+//    flex: 1 1 0%;
+//    height: 100%;
+//    display: flex;
+//    justify-content: left;
+//    align-items: center;
+//    padding-left: 10px;
+//    border-right: 1px solid $secondary ;
+//    cursor: pointer;
+//}
+//.nav-column a{
+//    position: absolute;
+//    text-decoration: none;
+//    color: $main-text; 
+//    font-size: 1em;
+//    letter-spacing: .1rem;
+//    /* text-transform: uppercase; */
+//    font-weight: bold;
+//
+//}
+//
+
+nav{
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
+    background-color: $primary;
 }
+
+.logo {
+    letter-spacing: 2px;
+    font-size: 20px;
+}
+
 .nav-links {
     display: flex;
-    list-style: none;
+    width: 35%;
+    justify-content: space-around;
+    a {
+        color: $main-text;
+        text-decoration: none;
+        letter-spacing: 2px;
+        font-size: 14px;
+    }
+    li{
+        list-style: none;
+    }
 }
 
-.nav-links li {
-    padding-left: 10rem;
-    font-size: 1.2rem;
-}
-
-.nav-links a{
-    text-decoration: none;
-    color: black;
-}
-
-.nav-container{
-    display: grid;
-    width: 100%;
-    height: 8vh;
-    grid-template-areas: "left content right";
-    grid-template-columns: 0.5fr 6fr 0.5fr;
-}
-.nav-border-left{
-    grid-area: left;
-    background-color: black;
-}
-.nav-border-right{
-    grid-area: right;
-}
-.nav-content{
-    grid-area: content;
-    display: grid;
-    width: 100%;
-    height: 100%;
-    grid-template-areas: "border-left center center center center border-right";
-    grid-template-columns: repeat(auto, 6);
-}
-
-.nav-column{
-    flex: 1 1 0%;
-    height: 100%;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    padding-left: 10px;
-    border-right: 1px solid $secondary ;
+.burger {
+    display: none;
     cursor: pointer;
-}
-.nav-column a{
-    position: absolute;
-    text-decoration: none;
-    color: var(--main-text);
-    font-size: 1em;
-    letter-spacing: .1rem;
-    /* text-transform: uppercase; */
-    font-weight: bold;
 
+    div{
+        width: 25px;
+        height: 3px;
+        background-color: $main-text;
+        margin: 5px;
+        transition: all 0.3s ease;
+    }
 }
 
+@media screen and (max-width:1024px){ 
+    .nav-links{
+        width: 50%;
+    }
+}
 
+@media screen and (max-width:768px){
+    body{
+        overflow-x: hidden;   
+    }
+    .nav-links{
+        position:absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        background-color: $primary;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+
+        li{
+            opacity: 0;
+        }
+   } 
+   .burger{
+       display: block;
+   }
+
+}
+
+.nav-active{
+    transform: translateX(0%);
+}
+
+@keyframes navLinkFade{
+    from{
+        opacity: 0;
+        transform: translateX(50%);
+    }
+    to{
+        opacity: 1;
+        transform:translateX(0%);
+    }
+
+}
+.toggle .line1{
+   transform: rotate(-45deg) translate(-5px, 6px); 
+}
+
+.toggle .line2{
+    opacity: 0;
+}
+.toggle .line3{ 
+   transform: rotate(45deg) translate(-5px, -6px); 
+}
