--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,13 +1,23 @@
+
+// Colors
+$primary: rgb(10, 10, 10); // nero 
+$background: rgb(17,67,81); // petrolio
+$petroil-black: rgb(4, 19, 17);
+$dark-green: rgb(13, 48, 46);
+$green: rgb(38, 77, 76);
+$light-green: rgb(62, 92, 103);
+$grey-green: rgb(62, 92, 103);
+$secondary: rgb(40, 40, 40); //grigio scuro
+$main-text: rgb(245, 245, 245); //bianco sporco
+
+//Color palette MIDNIGHT GREEN
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-$background: rgb(10, 10, 10);
-$secondary: rgba(40, 40, 40, 0.99);
-$main-text: white;
-
 
 body {
     height: 100vh;
@@ -19,35 +29,6 @@ body {
 }
 
 
-/* MAIN */
-.grid-container{
-    display: grid;
-    width: 100%;
-    height: 100vh;
-    grid-template-areas: "left content right";
-    grid-template-columns: 0.5fr 6fr 0.5fr;
-}
-.left-bar{
-    grid-area: left;
-    background-color: black;
-}
-.right-bar{
-    grid-area: right;
-}
-.content{
-    grid-area: content;
-    display: grid;
-    width: 100%;
-    height: 100%;
-    grid-template-areas: "border-left center center center center border-right";
-    grid-template-columns: repeat(auto, 6);
-}
-
-.content-columns{
-    flex: 1 1 0%;
-    height: 100%;
-    border-right: 1px solid var(--secondary);
-}
 
 .footer{
     position: absolute;
