--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,16 +1,19 @@
-<div class="nav-container">
-    
-    <div class="nav-border-left"></div>
-    <div class="nav-content">
-        <div class="nav-column"><a href="">> /Frabatx</a></div>
-            {{ range .Site.Menus.main }}
-            <div class="nav-column">
+<nav>
+    <div class="logo">
+        <h4>> /Frabatx</h4>
+    </div>
+    <ul class="nav-links">
+        {{ range .Site.Menus.main }}
+            <li class="nav-column">
                 <a href="{{ .URL }}">
                    /{{.Name}}
                 </a>
-            </div>
-            {{ end }}
-        <div class="nav-column"></div>
-        </div>
-    <div class="nav-border-right"></div>
-</div>
+            </li>
+        {{ end }}
+    </ul>
+    <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+    </div>
+</nav>
