--- a/assets/scss/components/home_grid.scss
+++ b/assets/scss/components/home_grid.scss
@@ -1,30 +1,30 @@
-/* MAIN */
-.grid-container{
-    display: grid;
-    width: 100%;
-    height: 100vh;
-    grid-template-areas: "left content right";
-    grid-template-columns: 0.5fr 6fr 0.5fr;
-}
-.left-bar{
-    grid-area: left;
-    background-color: black;
-}
-.right-bar{
-    grid-area: right;
-}
-.content{
-    grid-area: content;
-    display: grid;
-    width: 100%;
-    height: 100%;
-    grid-template-areas: "border-left center center center center border-right";
-    grid-template-columns: repeat(auto, 6);
-}
+// /* MAIN */
+// .grid-container{
+//     display: grid;
+//     width: 100%;
+//     height: 100vh;
+//     grid-template-areas: "left content right";
+//     grid-template-columns: 0.5fr 6fr 0.5fr;
+// }
+// .left-bar{
+//     grid-area: left;
+//     background-color: black;
+// }
+// .right-bar{
+//     grid-area: right;
+// }
+// .content{
+//     grid-area: content;
+//     display: grid;
+//     width: 100%;
+//     height: 100%;
+//     grid-template-areas: "border-left center center center center border-right";
+//     grid-template-columns: repeat(auto, 6);
+// }
 
-.content-columns{
-    flex: 1 1 0%;
-    height: 100%;
-    border-right: 1px solid $secondary;
-}
+// .content-columns{
+//     flex: 1 1 0%;
+//     height: 100%;
+//     border-right: 1px solid $secondary;
+// }
 
