--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,46 +4,36 @@
     <body>
     {{ partial "header.html" .}}
     <div class="main">
-        <h1>welcome to jumangi</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ac semper dui, ut eleifend massa. Vivamus varius libero ornare, semper nibh pharetra, placerat augue. Quisque eget sollicitudin libero. Phasellus ut finibus dolor, vel maximus dui. Donec hendrerit non enim vitae viverra. Praesent laoreet nec orci nec laoreet. Sed volutpat nulla magna. Nulla ipsum mi, aliquam sit amet lectus eget, malesuada egestas metus. Maecenas quis pellentesque turpis. Praesent vitae rutrum orci. Integer congue quam eu ante vestibulum finibus sed quis nibh. Duis et maximus sapien. Nam mattis, enim tempor interdum eleifend, quam mauris fermentum sem, ut auctor nibh justo fermentum mi. Duis vehicula blandit aliquam.
+        <div class="content">
+            <div class="html angular">
+                &lt html &gt
+            </div>
+            <div class="body angular">
+                &lt body &gt
+            </div>
+            <div class="h1 angular">
+                &lt h1 &gt
+            </div>
 
-            Vestibulum risus odio, varius et orci in, eleifend commodo ligula. Integer blandit urna quis libero viverra volutpat. Fusce mollis felis eu ex imperdiet, vel dapibus ipsum accumsan. Pellentesque vel magna turpis. Integer sit amet iaculis arcu. Integer sed diam aliquam, aliquam tellus ut, feugiat turpis. Nulla vulputate, ipsum hendrerit fermentum feugiat, sem leo aliquet velit, vel efficitur lacus nisi quis mauris.
-            
-            Nam ultricies ut magna in venenatis. Cras lacinia ipsum id eros elementum, at tincidunt nisi fermentum. Sed ultrices auctor nisi nec facilisis. Proin vitae lorem a leo auctor consequat. Sed id lacus ut nulla vestibulum porttitor sed sed neque. Nam in ultrices ex. Vivamus viverra aliquet libero pulvinar feugiat. Suspendisse a ante varius, condimentum neque sed, vulputate risus. Sed at nisl sed nunc pellentesque efficitur. Cras sed consequat nisl, aliquet rutrum arcu. Proin sit amet neque nec tortor ullamcorper mollis id in libero. Nam sed est dolor. Vivamus dignissim, dui sit amet dignissim semper, nulla est viverra est, eget convallis velit tortor vitae velit.
-            
-            Vivamus dapibus auctor nulla a iaculis. Praesent nec enim in mauris faucibus pellentesque sit amet in mi. Nunc at lacinia ex. Curabitur in velit purus. Praesent semper dui urna, nec interdum est mattis non. Praesent fringilla libero risus, nec varius purus tempor eget. Sed rutrum dui sit amet arcu mollis viverra. Vestibulum aliquet est ac eros vehicula, eget rutrum enim scelerisque. Proin fringilla accumsan arcu in porta. Etiam suscipit egestas libero ut interdum. Maecenas scelerisque tortor id odio vehicula lobortis. Maecenas est quam, varius vitae maximus non, varius id felis. Maecenas elementum egestas sagittis. Donec aliquet rutrum blandit.
-            
-            Maecenas vitae dolor a quam tincidunt finibus. Ut vel lacus ac lectus semper porta blandit sit amet sapien. Curabitur volutpat rutrum risus. Ut suscipit ac leo vel porta. Maecenas vehicula ultrices risus vel aliquet. In hac habitasse platea dictumst. Nullam porttitor imperdiet dui vitae pellentesque. Maecenas sit amet sodales odio, at egestas tortor. Duis nec finibus dui. Curabitur hendrerit enim id nibh blandit, venenatis cursus libero finibus. Quisque rhoncus semper ipsum sed mattis. Ut tortor ex, feugiat a sagittis in, dignissim vitae nibh. Aenean id tincidunt erat, egestas mollis purus.
-            
-            Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent eget convallis dolor. Aenean aliquet ipsum non enim pellentesque, quis tristique ipsum ornare. Mauris tristique urna a lorem tempor cursus. In hac habitasse platea dictumst. Curabitur aliquam risus nec ultrices vulputate. Praesent sollicitudin fermentum semper.
-            
-            Phasellus auctor pharetra tortor quis blandit. Fusce hendrerit aliquam fringilla. Vivamus at lacus placerat, sollicitudin augue ut, vehicula odio. In quis nisi lectus. Fusce et nulla augue. Morbi ultrices tristique pretium. Maecenas venenatis, turpis at pharetra rhoncus, mi sapien gravida arcu, ac ultricies neque nibh ut felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec bibendum quam vel libero scelerisque, sit amet vehicula risus facilisis. Sed orci orci, eleifend quis porta ut, pellentesque tempus elit. Proin mattis iaculis nulla in mollis.
-            
-            Integer eu nisl euismod, hendrerit odio non, suscipit libero. Nullam lacinia felis eu mauris tempus fermentum. Etiam eget justo libero. Curabitur volutpat, risus ut dictum vehicula, lacus risus efficitur nunc, quis dapibus mauris metus eget mauris. Donec venenatis urna vel enim vehicula consectetur. Cras bibendum turpis at lectus consectetur, eget tincidunt dolor gravida. Duis rhoncus tellus nec dictum bibendum. Fusce tincidunt ligula eget dui rutrum, eu sagittis urna cursus. Curabitur a sem ultrices, lacinia ex sed, tincidunt metus.
-            
-            Sed in congue metus. Praesent consectetur arcu ut risus sollicitudin aliquet. Nam scelerisque feugiat eros vel bibendum. Phasellus quis auctor urna, ut sagittis arcu. Aliquam consequat sit amet erat vitae euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis quam tincidunt orci gravida vehicula. Duis dapibus tortor eu tellus vulputate, vitae venenatis nisl tristique. Vivamus venenatis mi convallis erat molestie laoreet. Phasellus mi lacus, egestas id congue eu, tincidunt id velit. Mauris varius sed mauris eu egestas. Praesent mollis facilisis hendrerit.
-            
-            Maecenas mauris tortor, hendrerit ac dictum sed, rutrum a arcu. Cras tristique quis dui eu maximus. Donec at nisi risus. Phasellus et nunc sapien. Nam eget ullamcorper felis. Donec quis luctus est, in dignissim risus. Phasellus urna neque, aliquet non molestie non, vulputate et nisi.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ac semper dui, ut eleifend massa. Vivamus varius libero ornare, semper nibh pharetra, placerat augue. Quisque eget sollicitudin libero. Phasellus ut finibus dolor, vel maximus dui. Donec hendrerit non enim vitae viverra. Praesent laoreet nec orci nec laoreet. Sed volutpat nulla magna. Nulla ipsum mi, aliquam sit amet lectus eget, malesuada egestas metus. Maecenas quis pellentesque turpis. Praesent vitae rutrum orci. Integer congue quam eu ante vestibulum finibus sed quis nibh. Duis et maximus sapien. Nam mattis, enim tempor interdum eleifend, quam mauris fermentum sem, ut auctor nibh justo fermentum mi. Duis vehicula blandit aliquam.
+            <h1 class="hello-friend">
+                Hi,<br>
+                I'm Francesco,<br>
+                I'm a developer
+            </h1>
 
-            Vestibulum risus odio, varius et orci in, eleifend commodo ligula. Integer blandit urna quis libero viverra volutpat. Fusce mollis felis eu ex imperdiet, vel dapibus ipsum accumsan. Pellentesque vel magna turpis. Integer sit amet iaculis arcu. Integer sed diam aliquam, aliquam tellus ut, feugiat turpis. Nulla vulputate, ipsum hendrerit fermentum feugiat, sem leo aliquet velit, vel efficitur lacus nisi quis mauris.
+            <div class="h1 angular">
+                &lt /h1 &gt
+            </div>
+            <div class="p angular">
+                &lt p &gt
+            </div>
             
-            Nam ultricies ut magna in venenatis. Cras lacinia ipsum id eros elementum, at tincidunt nisi fermentum. Sed ultrices auctor nisi nec facilisis. Proin vitae lorem a leo auctor consequat. Sed id lacus ut nulla vestibulum porttitor sed sed neque. Nam in ultrices ex. Vivamus viverra aliquet libero pulvinar feugiat. Suspendisse a ante varius, condimentum neque sed, vulputate risus. Sed at nisl sed nunc pellentesque efficitur. Cras sed consequat nisl, aliquet rutrum arcu. Proin sit amet neque nec tortor ullamcorper mollis id in libero. Nam sed est dolor. Vivamus dignissim, dui sit amet dignissim semper, nulla est viverra est, eget convallis velit tortor vitae velit.
+            <p class="description">Data Science Student / Full Stack .Net Developer</p>
             
-            Vivamus dapibus auctor nulla a iaculis. Praesent nec enim in mauris faucibus pellentesque sit amet in mi. Nunc at lacinia ex. Curabitur in velit purus. Praesent semper dui urna, nec interdum est mattis non. Praesent fringilla libero risus, nec varius purus tempor eget. Sed rutrum dui sit amet arcu mollis viverra. Vestibulum aliquet est ac eros vehicula, eget rutrum enim scelerisque. Proin fringilla accumsan arcu in porta. Etiam suscipit egestas libero ut interdum. Maecenas scelerisque tortor id odio vehicula lobortis. Maecenas est quam, varius vitae maximus non, varius id felis. Maecenas elementum egestas sagittis. Donec aliquet rutrum blandit.
-            
-            Maecenas vitae dolor a quam tincidunt finibus. Ut vel lacus ac lectus semper porta blandit sit amet sapien. Curabitur volutpat rutrum risus. Ut suscipit ac leo vel porta. Maecenas vehicula ultrices risus vel aliquet. In hac habitasse platea dictumst. Nullam porttitor imperdiet dui vitae pellentesque. Maecenas sit amet sodales odio, at egestas tortor. Duis nec finibus dui. Curabitur hendrerit enim id nibh blandit, venenatis cursus libero finibus. Quisque rhoncus semper ipsum sed mattis. Ut tortor ex, feugiat a sagittis in, dignissim vitae nibh. Aenean id tincidunt erat, egestas mollis purus.
-            
-            Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent eget convallis dolor. Aenean aliquet ipsum non enim pellentesque, quis tristique ipsum ornare. Mauris tristique urna a lorem tempor cursus. In hac habitasse platea dictumst. Curabitur aliquam risus nec ultrices vulputate. Praesent sollicitudin fermentum semper.
-            
-            Phasellus auctor pharetra tortor quis blandit. Fusce hendrerit aliquam fringilla. Vivamus at lacus placerat, sollicitudin augue ut, vehicula odio. In quis nisi lectus. Fusce et nulla augue. Morbi ultrices tristique pretium. Maecenas venenatis, turpis at pharetra rhoncus, mi sapien gravida arcu, ac ultricies neque nibh ut felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec bibendum quam vel libero scelerisque, sit amet vehicula risus facilisis. Sed orci orci, eleifend quis porta ut, pellentesque tempus elit. Proin mattis iaculis nulla in mollis.
-            
-            Integer eu nisl euismod, hendrerit odio non, suscipit libero. Nullam lacinia felis eu mauris tempus fermentum. Etiam eget justo libero. Curabitur volutpat, risus ut dictum vehicula, lacus risus efficitur nunc, quis dapibus mauris metus eget mauris. Donec venenatis urna vel enim vehicula consectetur. Cras bibendum turpis at lectus consectetur, eget tincidunt dolor gravida. Duis rhoncus tellus nec dictum bibendum. Fusce tincidunt ligula eget dui rutrum, eu sagittis urna cursus. Curabitur a sem ultrices, lacinia ex sed, tincidunt metus.
-            
-            Sed in congue metus. Praesent consectetur arcu ut risus sollicitudin aliquet. Nam scelerisque feugiat eros vel bibendum. Phasellus quis auctor urna, ut sagittis arcu. Aliquam consequat sit amet erat vitae euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis quam tincidunt orci gravida vehicula. Duis dapibus tortor eu tellus vulputate, vitae venenatis nisl tristique. Vivamus venenatis mi convallis erat molestie laoreet. Phasellus mi lacus, egestas id congue eu, tincidunt id velit. Mauris varius sed mauris eu egestas. Praesent mollis facilisis hendrerit.
-            
-            Maecenas mauris tortor, hendrerit ac dictum sed, rutrum a arcu. Cras tristique quis dui eu maximus. Donec at nisi risus. Phasellus et nunc sapien. Nam eget ullamcorper felis. Donec quis luctus est, in dignissim risus. Phasellus urna neque, aliquet non molestie non, vulputate et nisi.
-        </p>
+            <div class="p angular">
+                &lt /p &gt
+            </div>
+        </div>
     </div>
     {{ partial "script.html" .}} 
     </body>
