--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -2,11 +2,11 @@
 
 .navbar {
     position: fixed;
-    background: -webkit-linear-gradient(to right, rgba(0, 0, 0, 1) , rgba(36,10,109, 0) );
+    background: linear-gradient(to right, rgba(0, 0, 0, 1) 0% 40% , rgba(36,10,109, 0) );
     transition: width 600ms ease;
     font-family: 'Roboto Mono', monospace;
     top: 0;
-    width: 20rem;
+    width: 15rem;
     height: 100vh;
 }
 
@@ -30,7 +30,7 @@
 // }
 
 .nav-item:first-child {
-    margin-bottom: 10rem;
+    margin-bottom: 14rem;
 }
 
 
@@ -45,7 +45,73 @@
 
 .nav-link:hover {
     filter: grayscale(0%) opacity(1);
-    color: $purple;
+    color: $yellow;
 }
 
+.logo span{
+    font-weight: bold;
+}
 
+.burger{
+    display: none;
+    position: absolute;
+    cursor: pointer;
+    top: 50px;
+    right: 50px;
+}
+.burger div{
+    width: 30px;
+    height: 5px;
+    background-color: $main-text;
+    margin: 5px;
+}
+
+@media screen and (max-width: 768px){
+    
+    
+    .burger{
+        display: block;
+        z-index: 3;
+    }
+
+    .navbar{
+        background: linear-gradient(to left, rgba(0, 0, 0, 1) 0% 70% , rgba(36,10,109, 0) );
+        position:fized;
+        right:0px;
+        height: 100%;
+        width: 50%;
+        display: flex;
+        flex-direction:column;
+        align-items: center;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in;
+        z-index: 2;
+    }
+    
+    .nav-link{
+        opacity: 0;
+    }
+
+    .navbar-na{
+        margin: 10vh 0;
+
+    }
+    .logo{
+        display: none;
+    }
+}
+
+.nav-active{
+    transform: translateX(0%)
+}
+
+@keyframes navLinkFade{
+    from{
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
