--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -24,6 +24,7 @@ body {
     background: linear-gradient(to right, $black, $violet);
     font-family: 'Montserrat', sans-serif;
     color: $main-text;
+    overflow-x: hidden;
 }
 
 body::-webkit-scrollbar{
