--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -56,8 +56,8 @@
     display: none;
     position: absolute;
     cursor: pointer;
-    top: 50px;
-    right: 50px;
+    top: 1rem;
+    right: 1rem;
 }
 .burger div{
     width: 30px;
@@ -68,7 +68,6 @@
 
 @media screen and (max-width: 768px){
     
-    
     .burger{
         display: block;
         z-index: 3;
@@ -76,7 +75,7 @@
 
     .navbar{
         background: linear-gradient(to left, rgba(0, 0, 0, 1) 0% 70% , rgba(36,10,109, 0) );
-        position:fized;
+        position:fixed;
         right:0px;
         height: 100%;
         width: 50%;
@@ -93,7 +92,7 @@
     }
 
     .navbar-na{
-        margin: 10vh 0;
+        margin: 50vh 0;
 
     }
     .logo{
@@ -108,7 +107,7 @@
 @keyframes navLinkFade{
     from{
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(200px);
     }
     to{
         opacity: 1;
