--- a/assets/scss/components/home_page.scss
+++ b/assets/scss/components/home_page.scss
@@ -2,8 +2,7 @@
 
 .main{
     position: absolute;
-    width: 100%;
-    height: 100%;
+    height: 92vh;
     margin-left: 20rem;
     padding: 4rem 0rem;
 }
