--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -21,10 +21,13 @@ $main-text: rgb(245, 245, 245);
 body {
     height: 100vh;
     position:relative;
-    background: linear-gradient(to right, $black, $violet);
     font-family: 'Montserrat', sans-serif;
     color: $main-text;
     overflow-x: hidden;
+    background: #000000;
+background: linear-gradient(to right,$black, #6100ff);
+background: -webkit-linear-gradient(to right,$black, #6100ff);
+background: -moz-linear-gradient(to right,$black, #6100ff);
 }
 
 body::-webkit-scrollbar{
