Inserita animaizone presentazione

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,39 +2,61 @@
 <html lang="en">
     {{ partial "head.html" .}}
     <body>
-    {{ partial "header.html" .}}
-    <div class="main">
-        <div class="content">
-            <div class="html angular">
-                &lt html &gt
-            </div>
-            <div class="body angular">
-                &lt body &gt
-            </div>
-            <div class="h1 angular">
-                &lt h1 &gt
-            </div>
+        <!-- NAVBAR -->
+        {{ partial "header.html" .}}
 
-            <h1 class="hello-friend">
-                Hi,<br>
-                I'm Francesco,<br>
-                I'm a developer
-            </h1>
-
-            <div class="h1 angular">
-                &lt /h1 &gt
-            </div>
-            <div class="p angular">
-                &lt p &gt
-            </div>
-            
-            <p class="description">Data Science Student / Full Stack .Net Developer</p>
-            
-            <div class="p angular">
-                &lt /p &gt
+        <!-- TERMINAL ANIMATION -->
+        <div class="terminal-container">
+            <div class="wrapper">
+                <div id="background-layer"></div>
+                <div id="typed-paragraph">
+                  <span id="codename">[frabatx@admin]$: > </span>
+                  <span id="im"></span>
+                  <span id="target"></span>
+                  <span id="prima"></span>
+                  <span id="seconda"></span>
+                  <span id="terza"></span>
+                  <span id="quarta"></span>
+                  <span id="cursor">|</span>
+                  <div id="rows"></div>
+                </div>
             </div>
         </div>
-    </div>
+        
+
+        <!-- MAIN PRESENTATION -->
+        <div class="main">
+            <div class="content">
+                <div class="html angular">
+                    &lt html &gt
+                </div>
+                <div class="body angular">
+                    &lt body &gt
+                </div>
+                <div class="h1 angular">
+                    &lt h1 &gt
+                </div>
+
+                <h1 class="hello-friend">
+                    Hi,<br>
+                    I'm Francesco,<br>
+                    I'm a developer
+                </h1>
+
+                <div class="h1 angular">
+                    &lt /h1 &gt
+                </div>
+                <div class="p angular">
+                    &lt p &gt
+                </div>
+                
+                <p class="description">Data Science Student / Full Stack .Net Developer</p>
+                
+                <div class="p angular">
+                    &lt /p &gt
+                </div>
+            </div>
+        </div>
     {{ partial "script.html" .}} 
     </body>
 </html>
