--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -1,5 +1,12 @@
 
 {{ "" | safeHTML }}
-{{ $script := resources.Get "js/app.js" | minify}}
+{{ $app := resources.Get "js/app.js" | minify}}
+{{ $terminal := resources.Get "js/terminal_animation.js" | minify}}
 
-<script src="{{ $script.Permalink }}"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/TextPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/EasePack.min.js"></script>
+<script src="{{ $app.Permalink }}"></script>
+<script src="{{ $terminal.Permalink }}"></script>
