--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -7,19 +7,19 @@
     top: 0;
     width: 15rem;
     height: 100vh;
-    background: #000000;
-    background: linear-gradient(0deg,#000000 50%, rgba(0,0,0,0) 100%);
-    background: -webkit-linear-gradient(0deg,#000000 50%, rgba(0,0,0,0) 100%);
-    background: -moz-linear-gradient(0deg,#000000 50%, rgba(0,0,0,0) 100%);
+    //background: #000000;
+    // background: linear-gradient(0deg,#000000 20%, rgba(0,0,0,0) 100%);
+    // background: -webkit-linear-gradient(0deg,#000000 20%, rgba(0,0,0,0) 100%);
+    // background: -moz-linear-gradient(0deg,#000000 20%, rgba(0,0,0,0) 100%);
 }
 
 .navbar-na{
     list-style: none;
-    padding: 3rem 0;
+    padding: 3rem 3rem;
     margin: 0;
     display: flex;
     flex-direction:column;
-    align-items: center;
+    align-items: left;
     height: 100%;
 }
 
@@ -79,18 +79,19 @@
     }
     
     .navbar{
-        position:fixed;
+        position:absolute;
         right:0px;
         height: 100%;
         width: 70%;
-        display: flex;
+        display:none;
         flex-direction:column;
         align-items: center;
         transform: translateX(100%);
         transition: transform 0.3s ease-in;
+        overflow: hidden;
         z-index: 2;
         background: #000000;
-        background: linear-gradient(180deg,#000000 50%, rgba(0,0,0,0) 100%);
+        background: linear-gradient(180deg,#000000 20%, rgba(0,0,0,0) 100%);
         background: -webkit-linear-gradient(180deg,#000000 50%, rgba(0,0,0,0) 100%);
         background: -moz-linear-gradient(180deg,#000000 50%, rgba(0,0,0,0) 100%);
     }
@@ -100,22 +101,24 @@
     }
     
     .navbar-na{
-        margin: 50vh 0;
-        
+        margin-top: 50vh;
+        align-items: center;
     }
+
     .logo{
         display: none;
     }
 }
 
 .nav-active{
-    transform: translateX(0%)
+    transform: translateX(0%);
+    display: block;
 }
 
 @keyframes navLinkFade{
     from{
         opacity: 0;
-        transform: translateX(300px);
+        transform: translateX(600px);
     }
     to{
         opacity: 1;
