--- a/assets/scss/components/home_page.scss
+++ b/assets/scss/components/home_page.scss
@@ -15,13 +15,15 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
 }
 
 // Decorazioni
 .angular{
     font-family: 'Alex Brush', cursive;
     font-size: 1.2rem;
-    color: #616161;
+    color: $grey;
+    //text-shadow: 1px 1px 3px $black;
 }
 
 
@@ -33,6 +35,7 @@
     position: absolute;
     top:4rem;
     margin-left: 1rem;
+    overflow: hidden;
 }
 .h1{
     margin-left: 1rem;
@@ -47,10 +50,13 @@
 .hello-friend{
     margin-left: 3rem;
     font-size: 5rem;
+    //text-shadow: 2px 5px 10px rgba(0, 0, 0, 0.6);
 }
 .description{
     font-size: 1.5rem;
-    color: #616161;
+    background: -webkit-linear-gradient(45deg,$purple, $violet);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     margin-left: 3rem;
 }
 
@@ -59,14 +65,13 @@
         margin:4rem 1rem;
     }
 
-    
-
     .angular{
         font-size: 1rem;
     }
 
     .hello-friend{
         font-size: 3.5rem;
+        //text-shadow: 1px 5px 10px rgba(0, 0, 0, 0.6);
     }
 
     .description{
